fix: switched from immutable to mutable list