@@ -7,6 +7,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -30,6 +31,6 @@ public class GroupExportService {
                 .stream()
                 .map(group -> adapter.getGroupById(realm, group.getId()))
                 .map(mapper::mapToConfig)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
